crates/solidity/testing/snapshots/bindings_output/contracts/super_scope/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[ input.sol:5:27 ]
   │
 5 │ ╭─▶     function foo() public pure virtual returns (string memory) {
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[ input.sol:12:27 ]
    │
 12 │ ╭─▶     function foo() public pure virtual override(A) returns (string memory) {
    ┆ ┆   
 14 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  4 │ contract A {
    │          ┬  
    │          ╰── name: 1
  5 │     function foo() public pure virtual returns (string memory) {
    │              ─┬─  
    │               ╰─── name: 2
    │ 
 10 │ contract B is A {
    │          ┬  
    │          ╰── name: 3
    │ 
 12 │     function foo() public pure virtual override(A) returns (string memory) {
    │              ─┬─  
    │               ╰─── name: 4
    │
    ├─[ input.sol:1:1 ]
    │
 10 │ contract B is A {
    │               ┬  
    │               ╰── ref: 1
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  3 │ ╭─▶ 
    ┆ ┆   
  8 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  5 │         function foo() public pure virtual returns (string memory) {
    │     ────────────┬────────────  
    │                 ╰────────────── definiens: 2
    │ 
  9 │ ╭─▶ 
    ┆ ┆   
 15 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
 11 │ ╭─▶     //    A super;
 12 │ ├─▶     function foo() public pure virtual override(A) returns (string memory) {
    │ │                                                                                  
    │ ╰────────────────────────────────────────────────────────────────────────────────── definiens: 4
────╯
